fixed spacing issues with sticky nav

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,9 @@
     --text-3xl: clamp(2.44rem, calc(4.82vw + 1.48rem), 5.7rem);
     --text-4xl: clamp(3.05rem, calc(8.14vw + 1.43rem), 8.54rem);
   }
+
+  @layer base{
+    body {
+      @apply mt-[105px];
+    }
+  }
